--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title> UNIX / Linux Tutorial for Beginners</title>
+<title> Hướng dẫn sử dụng UNIX/Linux cho người mới bắt đầu</title>
 <link href="unixtut2.css" rel="stylesheet" type="text/css" />
 <link href="unixtut2-print.css" rel="stylesheet" type="text/css" media="print" />
 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <meta name="Keywords" content="Unix Tutorial, Unix Guide, Beginners guide to Unix, Linux Tutorial, Linux Commands" />
 <meta name="Description" content="Beginners guide to the UNIX / Linux operating system.  Eight simple tutorials which cover the basics of UNIX." />
 <meta name="Copyright" content="Michael Stonebank, 1995-2003" />
@@ -14,69 +14,52 @@
 <body>
 <div id="container">
 
-<h1>UNIX  Tutorial for Beginners</h1>
-<p class="hint">A beginners guide to the <b>Unix</b> and <b>Linux</b> operating system. Eight simple tutorials which cover the basics of UNIX / Linux commands.</p>
+<h1>Hướng dẫn sử dụng UNIX cho người mới bắt đầu </h1>
+<p class="hint">Tài liệu hướng dẫn nhập môn hệ điều hành <b>Unix</b> và <b>Linux</b>. Eight simple tutorials which cover the basics of UNIX / Linux commands.</p>
 <hr />
 
-<div id="amazon">
-<dl id="red">
-  <dt><a href="reading.php">UNIX and Linux books</a></dt>
-  <dd>If you wish to continue learning Unix, here is a <a href="reading.php">list of good Unix and Linux books</a>, ranging from beginners to advanced. </dd>
-</dl>
-<iframe src="http://rcm.amazon.com/e/cm?t=unixtutorialf-20&o=1&p=8&l=as1&asins=0131478230&nou=1&fc1=000000&IS2=1&lt1=_blank&lc1=0000FF&bc1=FFFFFF&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-<iframe src="http://rcm.amazon.com/e/cm?t=unixtutorialf-20&o=1&p=8&l=as1&asins=0131480049&fc1=000000&IS2=1&lt1=_blank&lc1=0000FF&bc1=FFFFFF&bg1=FFFFFF&f=ifr&nou=1" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-<br />
-<iframe src="http://rcm.amazon.com/e/cm?t=unixtutorialf-20&o=1&p=8&l=as1&asins=0596003307&fc1=000000&IS2=1&lt1=_blank&lc1=0000FF&bc1=FFFFFF&bg1=FFFFFF&f=ifr&npa=1" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe><iframe src="http://rcm.amazon.com/e/cm?t=unixtutorialf-20&o=1&p=8&l=as1&asins=0596100299&fc1=000000&IS2=1&lt1=_blank&lc1=0000FF&bc1=FFFFFF&bg1=FFFFFF&f=ifr&npa=1" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-<br />
-<iframe src="http://rcm.amazon.com/e/cm?t=unixtutorialf-20&o=1&p=8&l=as1&asins=1593271182&fc1=000000&IS2=1&lt1=_blank&lc1=0000FF&bc1=FFFFFF&bg1=FFFFFF&f=ifr&npa=1" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-<iframe src="http://rcm.amazon.com/e/cm?t=unixtutorialf-20&o=1&p=8&l=as1&asins=047008278X&fc1=000000&IS2=1&lt1=_blank&lc1=0000FF&bc1=FFFFFF&bg1=FFFFFF&f=ifr&npa=1" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-<br />
-<iframe src="http://rcm.amazon.com/e/cm?t=unixtutorialf-20&o=1&p=8&l=as1&asins=0545029376&fc1=000000&IS2=1&lt1=_blank&lc1=0000FF&bc1=FFFFFF&bg1=FFFFFF&f=ifr&nou=1" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-<iframe src="http://rcm.amazon.com/e/cm?t=unixtutorialf-20&o=1&p=8&l=as1&asins=1416535071&fc1=000000&IS2=1&lt1=_blank&lc1=0000FF&bc1=FFFFFF&bg1=FFFFFF&f=ifr&nou=1" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-  <p>&nbsp;</p>
 
-</div>
 
 
 <blockquote>
-  <h3><a href="unixintro.html">Introduction to  the UNIX Operating System </a> </h3>
+  <h3><a href="unixintro.html"> Hướng dẫn về hệ điều hành UNIX </a> </h3>
   <ul>
-    <li> What is UNIX?</li>
-    <li>Files and processes</li>
-    <li> The Directory Structure</li>
-    <li> Starting an UNIX terminal</li>
+    <li> UNIX là gì?</li>
+    <li> Tập tin và các tiến trình</li>
+    <li> Cấu trúc thư mục</li>
+    <li> Khởi động thiết bị đầu cuối (terminal)</li>
   </ul>
-  <h3><a href="unix1.html">Tutorial One</a> </h3>
+  <h3><a href="unix1.html">Hướng dẫn 1</a> </h3>
   <ul>
-    <li> Listing files and directories </li>
-    <li> Making Directories </li>
-    <li> Changing to a different Directory </li>
-    <li> The directories . and .. </li>
-    <li> Pathnames </li>
-    <li> More about home directories and pathnames </li>
+    <li> Liệt kê tập tin và thư mục </li>
+    <li> Tạo thư mục mới </li>
+    <li> Di chuyển sang thư mục khác </li>
+    <li> Thư mục . và .. </li>
+    <li> Tên đường dẫn </li>
+    <li> Chi tiết hơn về thư mục nhà riêng và tên đường dẫn </li>
   </ul>
-  <h3><a href="unix2.html">Tutorial Two </a> </h3>
+  <h3><a href="unix2.html">Hướng dẫn 2 </a> </h3>
   <ul>
-    <li> Copying Files </li>
-    <li> Moving Files </li>
-    <li> Removing Files and directories </li>
-    <li> Displaying the contents of a file on the screen </li>
-    <li> Searching the contents of a file </li>
+    <li> Chép tập tin </li>
+    <li> Di chuyển tập tin </li>
+    <li> Xóa tập tin và thư mục </li>
+    <li> Hiển thị nội dung tập tin ra màn hình </li>
+    <li> Tìm kiếm nội dung trong tập tin </li>
   </ul>
-  <h3><a href="unix3.html">Tutorial Three </a> </h3>
+  <h3><a href="unix3.html">Hướng dẫn 3 </a> </h3>
   <ul>
-    <li> Redirection </li>
-    <li> Redirecting the Output </li>
-    <li> Redirecting the Input </li>
-    <li> Pipes</li>
+    <li> Chuyển hướng </li>
+    <li> Chuyển hướng đầu ra </li>
+    <li> Chuyển hướng đầu vào </li>
+    <li> Ống dẫn</li>
   </ul>
-  <h3><a href="unix4.html">Tutorial Four </a> </h3>
+  <h3><a href="unix4.html">Hướng dẫn 4 </a> </h3>
   <ul>
     <li> Wildcards </li>
-    <li> Filename Conventions </li>
-    <li> Getting Help </li>
+    <li> Quy ước đặt tên tập tin </li>
+    <li> Tìm hướng dẫn </li>
   </ul>
-  <h3><a href="unix5.html">Tutorial Five </a> </h3>
+  <h3><a href="unix5.html">Hướng dẫn 5 </a> </h3>
   <ul>
     <li> File system security (access rights) </li>
     <li> Changing access rights </li>
