nửa unixintro.html

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <div id="container">
 
 <h1>Hướng dẫn sử dụng UNIX cho người mới bắt đầu </h1>
-<p class="hint">Tài liệu hướng dẫn nhập môn hệ điều hành <b>Unix</b> và <b>Linux</b>. Eight simple tutorials which cover the basics of UNIX / Linux commands.</p>
+<p class="hint">Tài liệu hướng dẫn nhập môn hệ điều hành <b>Unix</b> và <b>Linux</b>. Tám bài hướng dẫn sau sẽ giúp bạn có những kiến thức cơ bản về các lệnh UNIX/Linux.</p>
 <hr />
 
 
 
 
 <blockquote>
-  <h3><a href="unixintro.html"> Hướng dẫn về hệ điều hành UNIX </a> </h3>
+  <h3><a href="unixintro.html"> Hệ điều hành UNIX </a> </h3>
   <ul>
     <li> UNIX là gì?</li>
     <li> Tập tin và các tiến trình</li>
@@ -61,37 +61,37 @@
   </ul>
   <h3><a href="unix5.html">Hướng dẫn 5 </a> </h3>
   <ul>
-    <li> File system security (access rights) </li>
-    <li> Changing access rights </li>
-    <li> Processes and Jobs </li>
-    <li> Listing suspended and background processes </li>
-    <li> Killing a process </li>
+    <li> Bảo mật hệ thống tập tin (quyền truy cập) </li>
+    <li> Thay đổi quyền truy cập </li>
+    <li> Tiến trình và công việc </li>
+    <li> Liệt kê các tiến trình bị tạm ngừng và chạy nền </li>
+    <li> Ép thoát một tiến trình </li>
   </ul>
-  <h3> <a href="unix6.html">Tutorial Six </a> </h3>
+  <h3> <a href="unix6.html">Hướng dẫn 6 </a> </h3>
   <ul>
-    <li> Other Useful UNIX commands </li>
+    <li> Các lệnh UNIX hữu ích khác </li>
   </ul>
-  <h3> <a href="unix7.html">Tutorial Seven </a> </h3>
+  <h3> <a href="unix7.html"> Hướng dẫn 7 </a> </h3>
   <ul>
-    <li> Compiling UNIX software packages </li>
-    <li> Download source code </li>
-    <li> Extracting source code </li>
-    <li>Configuring and creating the Makefile </li>
-    <li>Building the package </li>
-    <li>Running the software </li>
-    <li>Stripping unnecessary code </li>
+    <li> Biên dịch các gói phần mềm UNIX </li>
+    <li> Tải mã nguồn </li>
+    <li> Giải nén mã nguồn </li>
+    <li> Thiết lập và tạo Makefile </li>
+    <li> Xây dựng gói phần mềm </li>
+    <li> Chạy phần mềm đã biên dịch </li>
+    <li> Loại bỏ phần mã không cần thiết </li>
   </ul>
-  <h3> <a href="unix8.html">Tutorial Eight </a> </h3>
+  <h3> <a href="unix8.html">Hướng dẫn 8 </a> </h3>
   <ul>
-    <li>UNIX variables </li>
-    <li> Environment variables </li>
+    <li> Các biến UNIX </li>
+    <li> Các biến môi trường </li>
     <li> Shell variables </li>
-    <li> Using and setting variables</li>
+    <li> Sử dụng và tạo biến</li>
   </ul>
 </blockquote>
 <hr />
 <blockquote>
-  <h3><a href="reading.php">Recommended UNIX and Linux books</a></h3>
+  <h3><a href="reading.php">Các sách UNIX/Linux nên đọc</a></h3>
   <ul>
   <li>If you wish to continue learning Unix, here is a <a href="reading.php">list of good Unix and Linux books</a>, ranging from beginners to advanced. 
     
