--- a/pipeanswer.html
+++ b/pipeanswer.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title> UNIX Tutorial Three </title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="Copyright" content="Michael Stonebank, 1995-2003" />
 <link href="unixtut2.css" rel="stylesheet" type="text/css" />
 <link href="unixtut2-print.css" rel="stylesheet" type="text/css" media="print" />
