Sửa lại title và credit

--- a/unix1.html
+++ b/unix1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 <!--?xml version="1.0" encoding="UTF-8"?-->
-  <title>Hướng dẫn</title>
+  <title>Hướng dẫn UNIX 1</title>
 
   
   
@@ -236,15 +236,10 @@ dẫn đầy đủ. Để liệt kê nội dung của thư mục <span style="fo
     </tr>
   </tbody>
 </table>
-<p class="navbar" align="center"><a href="unixintro.html"><img src="media/left.gif" alt="Previous" border="0" height="39" width="37" /></a>
-<a href="index.html"><img src="media/home.gif" alt="Home" border="0" height="39" width="81" /></a><a href="unix2.html"><img src="media/right.gif" alt="Next" border="0" height="39" width="37" />&nbsp;&nbsp;&nbsp;
+<p align="center"><a href="unix1.html"><img src="media/left.gif" alt="Previous" border="0" height="39" width="37" /></a> <a href="index.html"><img src="media/home.gif" alt="Home" border="0" height="39" width="81" /></a><a href="unix3.html"><img src="media/right.gif" alt="Next" border="0" height="39" width="37" /></a>&nbsp;
 <br />
-</a></p>
-<p align="center"><iframe src="http://rcm.amazon.com/e/cm?t=unixtutorialf-20&amp;o=1&amp;p=13&amp;l=ur1&amp;category=home&amp;banner=1KCJXE8FXDSDTBZ6SWG2&amp;f=ifr" border="0" marginwidth="0" style="border: medium none ;" frameborder="0" height="60" scrolling="no" width="468">&amp;amp;amp;lt;/p&amp;amp;amp;gt;
-&amp;amp;amp;lt;p class="date"&amp;amp;amp;gt;M.Stonebank@surrey.ac.uk, © 9th
-October 2000
-&amp;amp;amp;lt;/p&amp;amp;amp;gt; &amp;amp;amp;lt;/div&amp;amp;amp;gt;
-&amp;amp;amp;lt;/body&amp;amp;amp;gt;&amp;amp;amp;lt;/html&amp;amp;amp;gt;</iframe></p>
+</p>
+<p class="date">M.Stonebank@surrey.ac.uk, © 9th October 2000 </p>
 </span></div>
 
 </body></html>
