--- a/unix2.html
+++ b/unix2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
-  <title>UNIX Tutorial Two</title>
+  <title>Hướng dẫn UNIX 2</title>
 
   
   
@@ -43,7 +43,6 @@ UNIX, dấu chấm nghĩa là thư mục hiện tại.<br />
 về thư mục hiện tại, giữ nguyên tên tập tin.</p>
 <p class="hint">Ghi chú: bạn có thể tải tập tin <span style="font-weight: bold;">science.txt</span> tại <a href="science.txt">đây</a>.
 </p>
-
 <h3>Bài tập 2a</h3>
 <p><strong><span style="font-weight: normal;">Tạo một bản sao lưu của
 tập tin <span style="font-weight: bold;">hosts</span> bằng cách sao
@@ -191,88 +190,83 @@ ngoặc kép đơn ('). Ví dụ, để tìm cụm từ spinning top, bạn gõ<
 <b>-n</b> thêm số thứ tự dòng ở đầu<br />
 <b>-c </b>in ra tổng số dòng có chứa cụm cần tìm<br />
 </p>
-
 <p>Hãy thử xem để thấy kết quả khác biệt ra sao. Đừng quên rằng bạn có
-thể dùng nhiều hơn một tùy chọn cùng một lúc. Ví dụ, lệnh để in ra tổng số dòng không chứa những từ science hay Science là<br />
+thể dùng nhiều hơn một tùy chọn cùng một lúc. Ví dụ, lệnh để in ra tổng
+số dòng không chứa những từ science hay Science là<br />
 </p>
 <p class="cli"> % grep -ivc science science.txt </p>
 <p>&nbsp;</p>
 <h3>wc (word count - đếm từ)</h3>
-<p>Lệnh wc là một lệnh rất hữu ích. Để đếm tổng số từ trong tập tin science.txt, bạn gõ<br />
- </p>
-
+<p>Lệnh wc là một lệnh rất hữu ích. Để đếm tổng số từ trong tập tin
+science.txt, bạn gõ<br />
+</p>
 <p class="cli"> % wc -w science.txt </p>
 <p>Để in ra tổng số dòng, bạn gõ<br />
- </p>
-
+</p>
 <p class="cli"> % wc -l science.txt </p>
 <h2>Tổng kết<br />
- </h2>
+</h2>
 <table align="center" border="1" cellpadding="5" cellspacing="0">
   <tbody>
     <tr>
       <th>Lệnh<br />
-</th>
+      </th>
       <th>Ý nghĩa<br />
-</th>
+      </th>
     </tr>
     <tr>
       <td class="command">cp <i>file1 file2</i></td>
       <td>chép file1 sang file2<br />
-</td>
+      </td>
     </tr>
     <tr>
       <td class="command">mv <i>file1 file2</i></td>
       <td>di chuyển hoặc đổi tên file1<br />
-</td>
+      </td>
     </tr>
     <tr>
       <td class="command">rm <i>file</i></td>
       <td>Xóa tập tin<br />
-</td>
+      </td>
     </tr>
     <tr>
       <td class="command">rmdir <i>directory</i></td>
       <td>Xóa thư mục<br />
-</td>
+      </td>
     </tr>
     <tr>
       <td class="command">cat <i>file</i></td>
       <td>Hiển thị tập tin<br />
-</td>
+      </td>
     </tr>
     <tr>
       <td class="command">less <i>file</i></td>
       <td>Hiển thị tập tin từng trang một<br />
-</td>
+      </td>
     </tr>
     <tr>
       <td class="command">head <i>file</i></td>
       <td>Hiển thị một vài dòng đầu tiên<br />
-</td>
+      </td>
     </tr>
     <tr>
       <td class="command">tail <i>file</i></td>
       <td>Hiển thị một vài dòng cuối<br />
-</td>
+      </td>
     </tr>
     <tr>
       <td class="command">grep <i>'keyword' file</i></td>
       <td>Tìm kiếm từ khóa trong tập tin<br />
-</td>
+      </td>
     </tr>
     <tr>
       <td class="command">wc <i>file</i></td>
       <td>đếm số ký tự/chữ/dòng trong tập tin<br />
-</td>
+      </td>
     </tr>
   </tbody>
 </table>
 <p align="center"><a href="unix1.html"><img src="media/left.gif" alt="Previous" border="0" height="39" width="37" /></a> <a href="index.html"><img src="media/home.gif" alt="Home" border="0" height="39" width="81" /></a><a href="unix3.html"><img src="media/right.gif" alt="Next" border="0" height="39" width="37" /></a></p>
-<p align="center">
-<script type="text/javascript"><!--
-  amazon_ad_tag = "unixtutorialf-20";  amazon_ad_width = "728";  amazon_ad_height = "90";  amazon_ad_logo = "hide";  amazon_ad_link_target = "new";  amazon_ad_price = "retail";  amazon_color_border = "E9ECF5";  amazon_color_link = "0000FF";  amazon_color_logo = "093697";  amazon_ad_categories = "abcdefg";//--></script>
-<script type="text/javascript" src="http://www.assoc-amazon.com/s/ads.js" /></p>
 <p class="date">M.Stonebank@surrey.ac.uk, © 9th October 2000 </p>
 </div>
 
